# FreeUDFLibC-0.6.1

./: AUTHORS  BlobFncs.c  BlobFncs.h  COPYING  ChangeLog  DateFncs.c  DateFncs.h  Debug.c  Debug.h  Encrypt.c  Encrypt.h  ExprPars.c  ExprPars.h  ExprPars.y  FreeUDFLibC.def  Lexer.c  Lexer.l  Makefile.am  Makefile.in  MathFncs.c  MathFncs.h  Misc.c  Misc.h  NEWS  README  README.md  StrFncs.c  StrFncs.h  SymTable.h  TODO  User.c  User.h  acconfig.h  aclocal.m4  confdefs.h  config.h.in  configure  configure.in  ext_functions.sql  super_ext_functions.sql  (+2 more)
common/: FreeUDFLibC.def.old  Makefile  Makefile.wat  config.h  config.h.win  gmtime_r.c  makefile.win  md5.c  md5.h  oldnamesubst.ld  setenv.c  strerror.c  syslog.c
devel/: GenSqlCyclicTest  GenSqlParserTest  MDDriver.c  Makefile.in  cycletest.in  lexertest.in  parsbuild  parsertest.in  runtimetest
doc/: BUGS  FreeUDFLib.html  FreeUDFLib.info  FreeUDFLib.texi  Makefile.am  Makefile.in  superset.txt  version.texi
local/: Makefile  Makefile.am  Makefile.in  access.c  build  clean_shit  cleanup  dtype.h  formatdatetime.c  getsockport  isymbols  libraries  loc_ext_functions.sql  loc_tests  masterpiece  meta  mklink  mkusers  phonetiser.c  phonetiser.h  ppk_buf.c  ppk_buf.h  ppkbuftool.c  ppkib1.c  ppkib1.def  ppkibaccess.def  ppkibaccess.h  ppkudflib.def.add  pptest  server  subst.ld  superfilter.awk  symbols
tests/: Makefile.in  buildbase  connect.sql  create.sql  cycletest  filtertest  meta  parsertest  passw_test  populate  query  supertest.sql  test.sql  user_test
